Change branch 4 to 9

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,18 @@
 		    <artifactId>appengine-api-1.0-sdk</artifactId>
 		    <version>1.9.81</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.73</version>
+		</dependency>
+
+		<dependency>
+			<groupId>se.walkercrou</groupId>
+			<artifactId>google-places-api-java</artifactId>
+			<version>2.1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
