--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ elasticCloud.id = travelplanner:dXMtZWFzdC0xLmF3cy5mb3VuZC5pbyRkNmNmMWI0MjE3ODA0
 jwtTokenProvider.jwtSecret = RandomSecretKey
 
 server.error.include-message=always
+
+google.map.apikey = AIzaSyBFNRmLV8bEPw15tE1fN79y-rlhTmw5Lso
